Alignment corrections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,16 @@ h1, h2, h3, h4, h5, h6 {
   box-shadow: 0px 2px 22px rgba(0, 0, 0, 0.5);
 }
 
+@media (max-width: 768px) {
+  #header {
+	   background: #effbed;
+  transition: all 0.5s;
+  z-index: 997;
+  padding-top: 0px;
+  box-shadow: 0px 2px 22px rgba(0, 0, 0, 0.5);
+}
+}
+
 #header .logo {
   font-size: 28px;
   margin: 0;
@@ -709,7 +719,7 @@ section {
 }
 .about .content {
   background-color: #effbed;
-  padding: 30px 40px;
+  padding: 30px 0;
 }
 
 .about .content h3 {
@@ -751,7 +761,7 @@ section {
 .about .content .icon-box p {
   font-size: 14px;
   color: #000;
-  margin-left: 70px;
+  /* margin-left: 70px; */
 }
 
 .about .image {
